fix article margin on mobile

--- a/src/css/main.scss
+++ b/src/css/main.scss
@@ -75,7 +75,9 @@ div.column.is-8:first-child {
 }
 .article-body {
   line-height: 1.4;
-  margin: 0 6rem;
+  @include from($desktop) {
+    margin: 0 6rem;
+  }
 }
 
 // nav
